--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,10 @@ nav:
 plugins:
     - search
     - git-revision-date
+    - blog:
+        format: "%d/%m/y%"
+        folder: "blog"
+    - tags
 
 theme:
   name: material
